# alicia-server

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  HOWTORUN.md  README.md
.github/workflows/: docker-publish.yml
cmake/: Versioning.cmake
include/libserver/: Constants.hpp  Executor.hpp  Stream.hpp  Util.hpp
include/libserver/base/: PacketServer.hpp  Server.hpp
include/libserver/chatter/: ChatterServer.hpp
include/libserver/command/: CommandProtocol.hpp  CommandServer.hpp
include/libserver/command/proto/: DataDefines.hpp  LobbyMessageDefines.hpp  RaceMessageDefines.hpp  RanchMessageDefines.hpp
include/libserver/data/: DataDefinitions.hpp  DataDirector.hpp  DataSource.hpp  DataStorage.hpp
include/libserver/data/file/: FileDataSource.hpp
include/libserver/data/helper/: ProtocolHelper.hpp
include/libserver/data/pq/: PqDataSource.hpp  SqlUtils.hpp
include/libserver/network/: Server.hpp
include/libserver/network/chatter/: ChatterProtocol.hpp  ChatterServer.hpp
include/libserver/network/chatter/proto/: ChatterMessageDefinitions.hpp
include/libserver/network/command/: CommandProtocol.hpp  CommandServer.hpp
include/libserver/network/command/proto/: CommonStructureDefinitions.hpp  LobbyMessageDefinitions.hpp  RaceMessageDefinitions.hpp  RanchMessageDefinitions.hpp
include/libserver/network/http/: WebSocket.hpp
include/libserver/registry/: ClientRegistry.hpp  CourseRegistry.hpp  HorseRegistry.hpp  ItemRegistry.hpp  OtpRegistry.hpp  PetRegistry.hpp  RoomRegistry.hpp
include/libserver/room/: RoomRegistry.hpp
include/libserver/system/: Director.hpp
include/libserver/util/: Deferred.hpp  Locale.hpp  Scheduler.hpp  Stream.hpp  Util.hpp
include/server/: Config.hpp  DataDirector.hpp  Executor.hpp  Scheduler.hpp  ServerInstance.hpp  Settings.hpp  Version.hpp.in
include/server/federation/: Federation.hpp
include/server/lobby/: LobbyDirector.hpp  LoginHandler.hpp
include/server/messenger/: MessengerDirector.hpp
include/server/race/: RaceDirector.hpp
include/server/ranch/: RanchDirector.hpp
include/server/system/: ChatSystem.hpp  InfractionSystem.hpp  OtpSystem.hpp  RoomSystem.hpp
include/server/tracker/: RaceTracker.hpp  RanchTracker.hpp  Tracker.hpp  WorldTracker.hpp
resources/: settings.json  settings.json5
resources/config/: bullied.json5  config.json5
resources/config/game/: breeding-market.yaml  characters.yaml  courses.yaml  emblems.yaml  horses.yaml  items.yaml  pets.yaml
resources/config/game/breeding/: prices.yaml
resources/config/server/: bullied.yaml  config.yaml
scripts/: database-data.sql  database-layout.sql
src/libserver/: Executor.cpp  Stream.cpp  Util.cpp
src/libserver/base/: Server.cpp
src/libserver/chatter/: ChatterServer.cpp
src/libserver/command/: CommandProtocol.cpp  CommandServer.cpp
src/libserver/command/proto/: DataDefines.cpp  LobbyMessageDefines.cpp  RaceMessageDefines.cpp  RanchMessageDefines.cpp
src/libserver/data/: DataDirector.cpp  DataSource.cpp
src/libserver/data/file/: FileDataSource.cpp
src/libserver/data/helper/: ProtocolHelper.cpp
src/libserver/data/pq/: PqDataSource.cpp  SqlUtils.cpp
src/libserver/network/: Server.cpp
src/libserver/network/chatter/: ChatterServer.cpp
src/libserver/network/chatter/proto/: ChatterMessageDefinitions.cpp
src/libserver/network/command/: CommandProtocol.cpp  CommandServer.cpp
src/libserver/network/command/proto/: CommonStructureDefinitions.cpp  LobbyMessageDefinitions.cpp  RaceMessageDefinitions.cpp  RanchMessageDefinitions.cpp
src/libserver/network/http/: WebSocket.cpp
src/libserver/registry/: CourseRegistry.cpp  HorseRegistry.cpp  ItemRegistry.cpp  OtpRegistry.cpp  PetRegistry.cpp  RoomRegistry.cpp
src/libserver/util/: Locale.cpp  Scheduler.cpp  Stream.cpp  Util.cpp
src/server/: Config.cpp  DataDirector.cpp  Executor.cpp  Scheduler.cpp  ServerInstance.cpp  Settings.cpp  main.cpp
src/server/lobby/: LobbyDirector.cpp  LoginHandler.cpp
src/server/messenger/: MessengerDirector.cpp
src/server/race/: RaceDirector.cpp
src/server/ranch/: RanchDirector.cpp
src/server/system/: ChatSystem.cpp  InfractionSystem.cpp  OtpSystem.cpp  RoomSystem.cpp
src/server/tracker/: RaceTracker.cpp  RanchTracker.cpp  WorldTracker.cpp
tests/: CMakeLists.txt
tests/src/: TestBuffers.cpp  TestExecutor.cpp  TestExecutorTimeout.cpp
tests/src/protocol/: TestMagic.cpp
tests/src/util/: TestLocale.cpp  TestScheduler.cpp  TestStream.cpp
